Fixed default value for vertically aligned items

--- a/src/utils/mixins/vertical-align.scss
+++ b/src/utils/mixins/vertical-align.scss
@@ -1,4 +1,4 @@
-@mixin vertical-align($extraTransforms: '') {
+@mixin vertical-align($extraTransforms: null) {
   position: absolute;
   top: 50%;
   transform: translateY(-50%) $extraTransforms;
